# Historical_Drift_Analyzer

./: all_src_files.txt  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini
.history/: .gitignore_20251127125554  .gitignore_20260221164159  README_20260221164816.md  README_20260221165555.md  README_20260221165602.md  README_20260221165610.md  README_20260221165612.md  README_20260221165642.md  README_20260221165643.md  README_20260221165738.md  README_20260221171353.md
configs/: config.yaml  embedding.yaml  ingestion.yaml  llm.yaml  prompt.yaml  retrieval.yaml
data/eval_charts_llama3_8b/: evaluation_table.csv  evaluation_table.md  evaluation_table.tex  raw_eval.csv  summary.json
data/eval_charts_mistral_7b/: evaluation_table.csv  evaluation_table.md  evaluation_table.tex  outliers.csv  raw_eval.csv  summary.json
data/eval_charts_phi3_4b/: evaluation_table.csv  evaluation_table.md  evaluation_table.tex  raw_eval.csv  summary.json
data/eval_logs_llama3_8b/: Analyze_the_mechanisms__strengths__and_limitations_of_list_examples_of_early_med_evaluation.json  Analyze_the_mechanisms__strengths__and_limitations_of_list_examples_of_electroni_evaluation.json  Compare_and_contrast_the_main_theoretical_perspectives_on_outline_the_core_subfi_evaluation.json  Define_define_universal_intelligence_as_discussed_in_the_corpus___describe_its_t_evaluation.json  Define_describe_expert_systems_and_their_key_components___describe_its_theoretic_evaluation.json  Define_explain_knowledge_representation_in_expert_systems_according_to_the_corpu_evaluation.json  Define_explain_the_turing_test_as_described_in_the_corpus___describe_its_theoret_evaluation.json  Define_provide_a_rigorous_definition_of_ai_using_only_the_provided_context___des_evaluation.json  Define_summarize_limitations_of_defining_intelligence_highlighted_in_the_corpus__evaluation.json  Define_what_is_artificial_intelligence___describe_its_theoretical_foundations__a_evaluation.json  evaluation_summary.json
data/eval_logs_mistral_7b/: Analyze_the_mechanisms__strengths__and_limitations_of_list_examples_of_early_med_evaluation.json  Analyze_the_mechanisms__strengths__and_limitations_of_list_examples_of_electroni_evaluation.json  Compare_and_contrast_the_main_theoretical_perspectives_on_outline_the_core_subfi_evaluation.json  Define_define_universal_intelligence_as_discussed_in_the_corpus___describe_its_t_evaluation.json  Define_describe_expert_systems_and_their_key_components___describe_its_theoretic_evaluation.json  Define_explain_knowledge_representation_in_expert_systems_according_to_the_corpu_evaluation.json  Define_explain_the_turing_test_as_described_in_the_corpus___describe_its_theoret_evaluation.json  Define_provide_a_rigorous_definition_of_ai_using_only_the_provided_context___des_evaluation.json  Define_summarize_limitations_of_defining_intelligence_highlighted_in_the_corpus__evaluation.json  Define_what_is_artificial_intelligence___describe_its_theoretical_foundations__a_evaluation.json  (+1 more)
scripts/: all_script_files.txt  calibrate_gt_thresholds.py  log_validator.py  run_all_topk_benchmarks.py  run_full_benchmark.py  run_intrinsic_eval.py  run_multi_model_benchmark.py
src/: all_src_files.txt
(+3893 files in other folders)
